fixed the form visibility in contact and registration

--- a/client/src/containers/Contact/Contact.css
+++ b/client/src/containers/Contact/Contact.css
@@ -1,7 +1,3 @@
-/* body {
-  background-color: #fcf7eb;
-} */
-
 .btn,
 .btn-large,
 .btn-small {
@@ -48,4 +44,9 @@
 }
 #contact-div {
   margin-right: 25%;
+}
+
+.input-field > label {
+  color: black;
+  font-weight: 800;
 }
